fix null issues

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   	Corona Virus News
   </h1>
 </nav>
-<div id='doc'></div>
+<div id="doc"></div>
 <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
