add donate button

--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
     <title>Corona Virus USA</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-</head>
-
-<body>
-<nav>
-  <h1>
-  	Corona Virus News
-  </h1>
-</nav>
-<div id="doc"></div>
-<script
+    <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
+</head>
+<body>
+<header>
+  <h1>
+  	Corona Virus News
+  </h1>
+</header>
+<div id="doc"></div>
+<footer>
+  <small>Spread the awareness and stay safe</small>
+  <button>
+    <a href="https://www.paypal.me/vasudevaartschool" id="donate">Donate</a>
+  </button>
+  <small>Learn more about covid-19 at <a href="https://www.who.int/health-topics/coronavirus">https://www.who.int</a></small>
+</footer>
 <script src="js/app.js"></script>
 </body>
 </html>
