add covid-19 to title in uppercase

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <header>
   <h1>
-  	Corona Virus News
+  	 (COVID-19) Corona Virus News
   </h1>
 </header>
 <div id="doc"></div>
@@ -25,7 +25,7 @@
   <button>
     <a href="https://www.paypal.me/vasudevaartschool" id="donate">Donate</a>
   </button>
-  <small>Learn more about covid-19 at <a href="https://www.who.int/health-topics/coronavirus">https://www.who.int</a></small>
+  <small>Learn more about COVID-19 at <a href="https://www.who.int/health-topics/coronavirus">https://www.who.int</a></small>
 </footer>
 <script src="js/app.js"></script>
 </body>
