add keywords for seo, open links in new tab securely

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="corona virus update from USA">
+    <meta name="description" content="corona COVID-19 virus news">
+    <meta name="keywords" content="corona,virus,COVID-19,news,disease,death,rate,deaths,spread,effect,cure,update">
+    <meta name="author" content="Vasudeva Pitta">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Corona Virus USA</title>
@@ -23,9 +25,9 @@
 <footer>
   <small>Spread the awareness and stay safe</small>
   <button>
-    <a href="https://www.paypal.me/vasudevaartschool" id="donate">Donate</a>
+    <a href="https://www.paypal.me/vasudevaartschool" target="_blank" rel="noopener" id="donate">Donate</a>
   </button>
-  <small>Learn more about COVID-19 at <a href="https://www.who.int/health-topics/coronavirus">https://www.who.int</a></small>
+  <small>Learn more about COVID-19 at <a href="https://www.who.int/health-topics/coronavirus" target="_blank" rel="noopener">https://www.who.int</a></small>
 </footer>
 <script src="js/app.js"></script>
 </body>
