add covid-19 to title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Vasudeva Pitta">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Corona Virus USA</title>
+    <title>Corona Virus News (COVID-19)</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script
@@ -18,7 +18,7 @@
 <body>
 <header>
   <h1>
-  	 (COVID-19) Corona Virus News
+  	 Corona Virus News (COVID-19)
   </h1>
 </header>
 <div id="doc"></div>
