--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <button>
     <a href="https://www.paypal.me/vasudevaartschool" target="_blank" rel="noopener" id="donate">Donate</a>
   </button>
-  <small>Learn more about COVID-19 at <a href="https://www.who.int/health-topics/coronavirus" target="_blank" rel="noopener">https://www.who.int</a></small>
+  <small>Learn more <a href="https://www.who.int/health-topics/coronavirus" target="_blank" rel="noopener">https://www.who.int</a></small>
 </footer>
 <script src="js/app.js"></script>
 </body>
