remove donate, add social icons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,25 @@
 </header>
 <div id="doc"></div>
 <footer>
-  <button>
+  <!-- <button>
     <a href="https://www.paypal.me/vasudevaartschool" target="_blank" rel="noopener" id="donate">Donate</a>
-  </button>
+  </button> -->
+
+  <div class="social-icon-div">
+    <a href="https://instagram.com/vasudevaartschool" target="_blank" title="Connect with me on Instagram">
+    <img src="icons/insta.svg" alt="link to vasudeva art school instagram page" class="social-icon">
+    </a>
+
+    <a href="https://www.facebook.com/vasudevaartschool" target="_blank" title="Connect with me on  Facebook">
+    <img src="icons/fb.svg" alt="link to vasudeva art school facebook page" class="social-icon">
+    </a>
+
+    <a href="https://www.linkedin.com/in/vasudevapitta" target="_blank" title="Connect with me on Linkedin">
+    <img src="icons/linkedin.svg" alt="link to vasudeva pitta linkedin page" class="social-icon">
+    </a>
+
+  </div>
+
   <small>Learn more <a href="https://www.who.int/health-topics/coronavirus" target="_blank" rel="noopener">https://www.who.int</a></small>
 </footer>
 <script src="js/app.js"></script>
